gcc/testsuite/gm2/iso/const/fail/testcap.mod
MODULE testcap ;

CONST
   foo = CAP (ch) ;

VAR
   ch: CHAR ;
BEGIN

END testcap.
